<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:text="@string/product_name_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <EditText
            android:id="@+id/edit_prod_name"
            android:hint="@string/dummy_product"
            android:inputType="textCapWords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:text="@string/product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <EditText
            android:id="@+id/edit_prod_price"
            android:hint="@string/dummy_price"
            android:inputType="textCapWords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/quantity_amount"
            android:textColor="@color/text_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

        <ImageButton
            android:id="@+id/decrement"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:src="@drawable/ic_decrease"
            android:onClick="decrease"/>

        <TextView
            android:id="@+id/edit_quantity"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="51dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:textColor="@color/text_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <ImageButton
            android:id="@+id/increment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:src="@drawable/ic_add"
            android:onClick="increase"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:text="@string/supplier_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <EditText
            android:id="@+id/edit_supp_name"
            android:hint="@string/dummy_suppl"
            android:inputType="textCapWords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:text="@string/supplier_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/text_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <EditText
            android:id="@+id/edit_supp_num"
            android:hint="@string/dummy_num"
            android:inputType="textCapWords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

        <ImageButton
            android:id="@+id/make_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/call_button_color"
            android:src="@drawable/ic_call"/>

    </LinearLayout>

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_item"
        android:textColor="@color/white"
        android:backgroundTint="@color/delete_color"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

</LinearLayout>