<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/list_item_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/prod_name"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text_color"/>

        <TextView
            android:id="@+id/price_label"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text= "@string/price"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/text_color"/>

        <TextView
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/text_color"/>

        <Button
            android:id="@+id/sale_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/button_text_color"
            android:text="Sale"
            android:focusable="false"/>

    </LinearLayout>
</LinearLayout>